Fix dashboard tables on mobile

--- a/projects/DigitPop-CMS/src/app/cms/dashboard/dashboard.component.scss
+++ b/projects/DigitPop-CMS/src/app/cms/dashboard/dashboard.component.scss
@@ -7,8 +7,7 @@
   grid-auto-flow: row;
 }
 
-.toolbar
-{
+.toolbar {
   grid-row: 1/2;
   grid-column: 1/2;
   margin-top: 20px;
@@ -16,8 +15,7 @@
   margin-left: 20px;
 }
 
-.campaignsToolbar
-{
+.campaignsToolbar {
   grid-row: 13/16;
   grid-column: 1/13;
   margin-top: 20px;
@@ -26,8 +24,7 @@
 }
 
 
-.projectList
-{
+.projectList {
   margin-left: 20px;
   margin-right: 20px;
   grid-row: 2/10;
@@ -35,16 +32,14 @@
 
 }
 
-.campaignsList
-{
+.campaignsList {
   margin-left: 20px;
   margin-right: 20px;
   grid-row: 16/24;
   grid-column: 1/13;
 }
 
-.chart
-{
+.chart {
   grid-row: 6/10;
   grid-column: 1/13;
 }
@@ -66,9 +61,9 @@ table {
   top: 50%;
   height: 100%;
   width: auto;
-  -webkit-transform: translate(-50%,-50%);
-      -ms-transform: translate(-50%,-50%);
-          transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .thumbnail img.portrait {
@@ -77,11 +72,13 @@ table {
 }
 
 .mat-header-cell {
-  padding: 0px 20px 0px 20px;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px 0 20px;
 }
 
 .mat-cell {
-  padding: 0px 20px 0px 20px;
+  padding: 0 20px 0 20px;
 }
 
 
@@ -155,32 +152,27 @@ table {
   width: 100%;
 }
 
-@media(max-width:500px)
-{
-  table{
+@media(max-width: 500px) {
+  table {
     display: flex;
     flex-direction: column;
   }
   tr.mat-header-row {
     display: flex;
   }
-  tbody{
+  tbody {
     display: flex;
     flex-direction: row;
   }
-  .mat-header-cell
- {
-   width: 10%;
+  .mat-header-cell {
+    width: 10%;
     display: flex;
     flex-direction: row;
     // grid-template-columns: repeat(12, 1fr);
   }
-  .mat-cell{
+  .mat-cell {
     width: 15%;
   }
-
-
-
 
 
 }
@@ -236,4 +228,24 @@ tr.example-element-row:not(.example-expanded-row):active {
 .inner-table mat-form-field {
   margin-top: 15px;
   width: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  border-radius: 30px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 30px;
+  background-color: #c2185b;
+}
+
+::-webkit-scrollbar-button,
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-track-piece,
+::-webkit-scrollbar-corner,
+::-webkit-resizer {
+  display: none;
 }
